<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sound"
        android:src="@drawable/popup_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/soundText"
        app:layout_constraintTop_toTopOf="@id/sound"
        app:layout_constraintBottom_toBottomOf="@id/sound"
        app:layout_constraintStart_toStartOf="@id/sound"
        android:layout_width="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/sound"
        android:text="@string/sound_on"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/menu"
        android:layout_marginTop="8dp"
        android:src="@drawable/popup_1"
        app:layout_constraintTop_toBottomOf="@id/soundText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/menuText"
        app:layout_constraintTop_toTopOf="@id/menu"
        app:layout_constraintBottom_toBottomOf="@id/menu"
        app:layout_constraintStart_toStartOf="@id/menu"
        android:layout_width="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/menu"
        android:text="@string/menu"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/newGame"
        android:layout_marginTop="8dp"
        android:src="@drawable/popup_1"
        app:layout_constraintTop_toBottomOf="@id/menuText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/newGameText"
        app:layout_constraintTop_toTopOf="@id/newGame"
        app:layout_constraintBottom_toBottomOf="@id/newGame"
        app:layout_constraintStart_toStartOf="@id/newGame"
        android:layout_width="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/newGame"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>