<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/review"
        android:src="@drawable/popup_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/reviewText"
        app:layout_constraintTop_toTopOf="@id/review"
        app:layout_constraintBottom_toBottomOf="@id/review"
        app:layout_constraintStart_toStartOf="@id/review"
        android:layout_width="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/review"
        android:text="@string/telegram"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/telegram"
        android:layout_marginTop="8dp"
        android:src="@drawable/popup_1"
        app:layout_constraintTop_toBottomOf="@id/reviewText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/telegramText"
        app:layout_constraintTop_toTopOf="@id/telegram"
        app:layout_constraintBottom_toBottomOf="@id/telegram"
        app:layout_constraintStart_toStartOf="@id/telegram"
        android:layout_width="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/telegram"
        android:text="@string/info"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/info"
        android:layout_marginTop="8dp"
        android:src="@drawable/popup_1"
        app:layout_constraintTop_toBottomOf="@id/telegramText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/infoText"
        app:layout_constraintTop_toTopOf="@id/info"
        app:layout_constraintBottom_toBottomOf="@id/info"
        app:layout_constraintStart_toStartOf="@id/info"
        android:layout_width="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/info"
        android:text="@string/cencel"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>